# Flint

./: .gitignore  ANIMATED_LOADSCREEN.md  HUD_SYSTEM_PLAN.md  MAP_PROJECT_PLAN.md  README.md  TODO.md  cliff.toml  flint-preview.html  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: bridge-release.yml  release.yml
Hematite-main/: .gitignore  README.md  package-lock.json  package.json
Hematite-main/config/: README.md  champion_list.json  fix_config.json
Hematite-main/docs/: ARCHITECTURE.md  CHANGELOG.md  CONFIG_SCHEMA.md  CONTRIBUTING.md  REFERENCE_ANALYSIS.md  TODO.md
Hematite-main/src/: main.js  styles.css
Hematite-main/src-tauri/: Cargo.toml  build.rs  fix_config.json  tauri.conf.json
Hematite-main/src-tauri/src/: lib.rs  logging.rs  main.rs  processor.rs
Hematite-main/src-tauri/src/analyzer/: bin_parser.rs  bnk_version.rs  detector.rs  hash_dict.rs  hash_downloader.rs  mod.rs  scanner.rs  wad_cache.rs  wad_writer.rs
Hematite-main/src-tauri/src/commands/: analyze.rs  fix.rs  mod.rs
Hematite-main/src-tauri/src/config/: cache.rs  champion_list.rs  fetcher.rs  mod.rs  schema.rs
Hematite-main/src-tauri/src/fixer/: applier.rs  mod.rs
docs/: ARCHITECTURE.md  BNK_EDITOR_AND_TEXTURE_PARSING.md  FEATURES.md  MODPKG_OPTIMIZATION.md  STATE_MANAGEMENT.md
public/: embed.html
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/flint-ltk/: Cargo.toml
src-tauri/crates/flint-ltk/src/: lib.rs  luabin.rs  troybin.rs
src-tauri/crates/flint-ltk/src/audio/: bnk.rs  event_mapper.rs  mod.rs  wem.rs  wpk.rs
src-tauri/crates/flint-ltk/src/champion/: discovery.rs
src-tauri/crates/flint-ltk/src/export/: mod.rs
src-tauri/crates/flint-ltk/src/hash/: downloader.rs  lmdb_cache.rs  mod.rs
src-tauri/crates/flint-ltk/src/hud/: mod.rs
src-tauri/crates/flint-ltk/src/league/: detector.rs
src-tauri/crates/flint-ltk/src/map/: mod.rs
src-tauri/crates/flint-ltk/src/mesh/: animation.rs  skl.rs
src-tauri/crates/flint-ltk/src/project/: mod.rs  project.rs
src-tauri/crates/flint-ltk/src/repath/: mod.rs  organizer.rs  refather.rs
src-tauri/crates/flint-ltk/src/wad/: extractor.rs  reader.rs
src-tauri/installer-assets/: README.md
src-tauri/nsis/: installer.nsi  installer.nsi.tmp.1612.1773610633145
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: audio.rs  bin.rs  bin_split.rs  champion.rs  champion_schema.rs  checkpoint.rs  dev.rs  export.rs  external_apps.rs  extract_hashes.rs  fantome_import.rs  file.rs  fixer.rs  format_converters.rs  hash.rs  hud.rs  league.rs  logging.rs  ltk_manager.rs  map_project.rs  mesh.rs  mod.rs  modpkg_import.rs  project.rs  project_watcher.rs  settings.rs  updater.rs  validation.rs  wad.rs
src-tauri/src/core/: checkpoint.rs  mod.rs  write_echo.rs
src-tauri/src/core/audio/: bnk.rs  hirc.rs  wem.rs  wpk.rs
src-tauri/src/core/export/: mod.rs
src-tauri/src/core/hash/: downloader.rs  hashtable.rs  lmdb_cache.rs  mod.rs
src-tauri/src/core/hud/: mod.rs  parser.rs
src-tauri/src/core/mesh/: animation.rs  bin_texture_discovery.rs  mod.rs  scb.rs  skn.rs  texture.rs
src-tauri/src/core/project/: project.rs
src-tauri/src/core/repath/: organizer.rs  refather.rs
src-tauri/src/core/validation/: engine.rs  mod.rs
src-tauri/src/core/wad/: cache.rs  extractor.rs  mod.rs  reader.rs
src/assets/: wad-cheat-sheet.md
src/components/: App.tsx  CenterPanel.tsx  CheckpointTimeline.tsx  ConfirmDialog.tsx  ContextMenu.tsx  FileTree.tsx  PreviewPanel.tsx  StatusBar.tsx  TabBar.tsx  TitleBar.tsx  Toast.tsx  TopBar.tsx  TutorialOverlay.tsx  WadBrowser.tsx  WadExplorer.tsx  WadPreviewPanel.tsx  WelcomeScreen.tsx
src/components/icons/: JadeIcon.tsx  QuartzIcon.tsx
src/components/modals/: BinSplitModal.tsx  BrowseWadModal.tsx  CheckpointModal.tsx  ExportModal.tsx  FirstTimeSetupModal.tsx  FixerModal.tsx  FullResImageModal.tsx  ModConfigEditorModal.tsx  NewProjectModal.tsx  ProjectListModal.tsx  RecolorModal.tsx  SettingsModal.tsx  ThumbnailCropModal.tsx  UpdateModal.tsx  WadCheatSheetModal.tsx
src/components/preview/: AudioCutterModal.tsx  BinEditor.tsx  BnkPreview.tsx  FolderGridView.tsx  HUDCanvas.css  HUDCanvas.tsx  HUDEditor.css  HUDEditor.tsx  ImagePreview.tsx  ModelPreview.tsx  TextPreview.tsx  audioUtils.ts
src/components/ui/: Button.tsx  Checkbox.tsx  DesignLab.tsx  Dropdown.tsx  FormField.tsx  IMPROVEMENTS.md  Icon.tsx  Modal.tsx  Panel.tsx  Picker.tsx  ProgressBar.tsx  Radio.tsx  Spinner.tsx  UIShowcase.tsx  index.ts
src/lib/: api.ts  buttonGlow.ts  datadragon.ts  fileContextMenuOptions.ts  fileIcons.tsx  imageCache.ts  logger.ts  ritobinLanguage.ts  sidecarFiles.ts  spritesheet.ts  state.ts  types.ts  utils.ts
src/lib/stores/: appMetadataStore.ts  championStore.ts  configStore.ts  index.ts  modalStore.ts  navigationCoordinator.ts  navigationStore.ts  notificationStore.ts  projectTabStore.ts  wadExplorerStore.ts  wadExtractStore.ts
src/styles/: browse-wad-polish.css  cheat-sheet-polish.css  design-lab.css  fixer-polish.css  index.css  logger-polish.css  new-project-polish.css  project-list-polish.css  settings-polish.css  ui-primitives.css  wad-explorer-polish.css
