[workspace]
members = [".", "crates/flint-ltk"]

[package]
name = "flint"
version = "1.8.6"
edition = "2021"
default-run = "flint"

[lib]
name = "flint"
path = "src/lib.rs"

[[bin]]
name = "flint"
path = "src/main.rs"

[[bin]]
name = "bin_roundtrip_test"
path = "src/bin/bin_roundtrip_test.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core library (all LTK deps live here)
flint-ltk = { path = "crates/flint-ltk" }

# Tauri framework
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "fs", "io-util", "sync", "macros", "time"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
parking_lot = "0.12"
rayon = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data / text
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2.1", features = ["serde"] }
regex = "1.12.2"
uuid = { version = "1.20.0", features = ["v4"] }
semver = "1.0"

# Image processing (used directly by commands/file.rs)
image = { version = "0.25", default-features = false, features = ["dds", "png", "webp"] }
image_dds = "0.6"
ddsfile = "0.5"
base64 = "0.21"

# Filesystem
walkdir = "2.4"
notify = "7.0"
notify-debouncer-full = "0.4"
opener = "0.7"

# ZIP (fantome export/import)
zip = { version = "2.4", features = ["deflate"] }

[dev-dependencies]
proptest = "1.0"
tempfile = "3.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

# =============================================================================
# BUILD PROFILES - Optimized for fast incremental compilation
# =============================================================================

# Development profile - fastest incremental rebuilds
[profile.dev]
# Minimal optimization for your code (fastest compile)
opt-level = 0
# More codegen units = more parallelism during compilation
codegen-units = 256
# Enable incremental compilation
incremental = true
# No debug info by default (faster linking), set to 2 for debugging
debug = 1

# Optimize dependencies even in dev mode (they don't change often)
# This makes your app run faster without slowing down your code changes
[profile.dev.package."*"]
opt-level = 2
codegen-units = 16

# Release-dev profile - for testing with optimizations (NO slow LTO)
# Use: cargo build --profile release-dev
[profile.release-dev]
inherits = "release"
opt-level = 2
lto = "off"
codegen-units = 16
incremental = true
debug = 1
strip = false

# Full release profile - slow build, maximum performance
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
